--- a/eventDetailPage.html
+++ b/eventDetailPage.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Add Event</h1>
+    <form action="submit_event.php" method="POST">
+        <label for="event_name">Event Name:</label>
+        <input type="text" id="event_name" name="event_name" required><br><br>
+
+        <label for="event_date">Event Date:</label>
+        <input type="date" id="event_date" name="event_date" required><br><br>
+
+        <label for="event_time">Event Time:</label>
+        <input type="time" id="event_time" name="event_time" required><br><br>
+
+        <label for="event_location">Event Location:</label>
+        <input type="text" id="event_location" name="event_location" required><br><br>
+
+        <label for="event_description">Event Description:</label><br>
+        <textarea id="event_description" name="event_description" rows="4" cols="50" required></textarea><br><br>
+
+        <input type="submit" value="Add Event">
+    </form>
 </body>
 </html>
