--- a/newEvent.html
+++ b/newEvent.html
@@ -8,13 +8,15 @@
 </head>
 <div data-include="components/header.html"></div>
 <body>
-    <h1>Add Event</h1>
+    <div class="header">
+    <h2>Add Event</h2>
+</div>
     <form action="#" method="POST" enctype="multipart/form-data">
         <label for="event_category">Category:</label>
         <select id="event_category" name="event_category">
-            <option value="music">Music</option>
+            <option value="study">Study</option>
             <option value="sports">Sports</option>
-            <option value="art">Art</option>
+            <option value="movies">Movies</option>
             <option value="food">Food</option>
             <option value="other">Other</option>
         </select><br><br>
