--- a/events.html
+++ b/events.html
@@ -15,15 +15,15 @@
         <div class="category">
             <h2>Category 1</h2>
             <div class="event">
-                <h3><a href="event-details.html">Event 1</a></h3>
+                <h3><a href="eventDetailPage.html">Event 1</a></h3>
                 <p>Event description goes here...</p>
             </div>
             <div class="event">
-                <h3><a href="event-details.html">Event 2</a></h3>
+                <h3><a href="eventDetailPage.html">Event 2</a></h3>
                 <p>Event description goes here...</p>
             </div>
             <div class="event">
-                <h3><a href="event-details.html">Event 3</a></h3>
+                <h3><a href="eventDetailPage.html">Event 3</a></h3>
                 <p>Event description goes here...</p>
             </div>
         </div>
@@ -31,15 +31,15 @@
         <div class="category">
             <h2>Category 2</h2>
             <div class="event">
-                <h3><a href="event-details.html">Event 4</a></h3>
+                <h3><a href="eventDetailPage.html">Event 4</a></h3>
                 <p>Event description goes here...</p>
             </div>
             <div class="event">
-                <h3><a href="event-details.html">Event 5</a></h3>
+                <h3><a href="eventDetailPage.html">Event 5</a></h3>
                 <p>Event description goes here...</p>
             </div>
             <div class="event">
-                <h3><a href="event-details.html">Event 6</a></h3>
+                <h3><a href="eventDetailPage.html">Event 6</a></h3>
                 <p>Event description goes here...</p>
             </div>
         </div>
