--- a/eventDetailPage.html
+++ b/eventDetailPage.html
@@ -4,27 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylesheet"> 
+    <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
+<div data-include="components/header.html"></div>
 <body>
-    <h1>Add Event</h1>
-    <form action="submit_event.php" method="POST">
-        <label for="event_name">Event Name:</label>
-        <input type="text" id="event_name" name="event_name" required><br><br>
-
-        <label for="event_date">Event Date:</label>
-        <input type="date" id="event_date" name="event_date" required><br><br>
-
-        <label for="event_time">Event Time:</label>
-        <input type="time" id="event_time" name="event_time" required><br><br>
-
-        <label for="event_location">Event Location:</label>
-        <input type="text" id="event_location" name="event_location" required><br><br>
-
-        <label for="event_description">Event Description:</label><br>
-        <textarea id="event_description" name="event_description" rows="4" cols="50" required></textarea><br><br>
-
-        <input type="submit" value="Add Event">
-    </form>
+    <div class="header">
+        <h2>Event Details</h2>
+    </div>
 </body>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/HTMLInclude.js"></script>
 </html>
