--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <div data-include="components/header.html"></div>
     <main>
-      <h2>
-        Welcome
-      </h2>
+      <div class="header">
+        <h2>Welcome</h2>
+    </div>
       <p>
        Thank you for viewing my website.
       </p>
