Tons of updates

--- a/eventDetailPage.html
+++ b/eventDetailPage.html
@@ -8,9 +8,28 @@
 </head>
 <div data-include="components/header.html"></div>
 <body>
-    <div class="header">
-        <h2>Event Details</h2>
-    </div>
+    <header>
+        <!-- Add your header content here -->
+    </header>
+    <main>
+        <section class="event-detail">
+            <h1>ITIS 4166</h1>
+            <img class="eventImg"src="images/CCIimg.jpg" alt="Event Image">
+            <p>Hosted by: Professor Whaley</p>
+            <p>Start Date/Time: Sept 15th 2:30 pm</p>
+            <p>End Date/Time: Sept 15th 3:30 pm</p>
+            <p>Location: Woodward 125</p>
+            <p>Event Description:</p>
+            <p>We will be going over the basics of VS code and how to install it onto your machine </p>
+            <div class="action-buttons">
+                <button id="edit-button">Edit Event</button>
+                <button id="delete-button">Delete Event</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <!-- Add your footer content here -->
+    </footer>
 </body>
     <div data-include="components/footer.html"></div>
     <script src="scripts/HTMLInclude.js"></script>
