--- a/events.html
+++ b/events.html
@@ -13,34 +13,34 @@
     </div>
     <div class="container">
         <div class="category">
-            <h2>Category 1</h2>
+            <h2>Study</h2>
             <div class="event">
-                <h3><a href="eventDetailPage.html">Event 1</a></h3>
-                <p>Event description goes here...</p>
+                <h3><a href="eventDetailPage.html">ITIS 4688</a></h3>
+                <p>Intro to pen testing.</p>
             </div>
             <div class="event">
-                <h3><a href="eventDetailPage.html">Event 2</a></h3>
-                <p>Event description goes here...</p>
+                <h3><a href="eventDetailPage.html">ITIS 4166</a></h3>
+                <p>Setting up coding environment.</p>
             </div>
             <div class="event">
-                <h3><a href="eventDetailPage.html">Event 3</a></h3>
-                <p>Event description goes here...</p>
+                <h3><a href="eventDetailPage.html">GEOL 1200</a></h3>
+                <p>Ocean boundaries and how they work.</p>
             </div>
         </div>
 
         <div class="category">
-            <h2>Category 2</h2>
+            <h2>Sports</h2>
             <div class="event">
-                <h3><a href="eventDetailPage.html">Event 4</a></h3>
-                <p>Event description goes here...</p>
+                <h3><a href="eventDetailPage.html">Flag Football</a></h3>
+                <p>Group style flag football.</p>
             </div>
             <div class="event">
-                <h3><a href="eventDetailPage.html">Event 5</a></h3>
-                <p>Event description goes here...</p>
+                <h3><a href="eventDetailPage.html">Disc Golf</a></h3>
+                <p>Disc golf tournament.</p>
             </div>
             <div class="event">
-                <h3><a href="eventDetailPage.html">Event 6</a></h3>
-                <p>Event description goes here...</p>
+                <h3><a href="eventDetailPage.html">Bowling Night</a></h3>
+                <p>Team bowling event for all students.</p>
             </div>
         </div>
     </div>
