--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="header">
         <h2>Welcome</h2>
     </div>
+      <h3>
+        Welcome to LaMay Technologies Events Site
+      </h3>
       <p>
-       Thank you for viewing my website.
-      </p>
-      <p>
-        Click the links to view various pages for my website.
+        This site is for students that attend UNCC to find events that best suit their interests and allow them to find  to study and meet new people.
       </p>
     </main>
     <div data-include="components/footer.html"></div>
